Remova o módulo "Manutenções" e migre a funcionalidade para o contexto do módulo "Oficina", incluindo refatoração completa do código e ajustes nos estilos.

--- a/frota-pro/src/app/shared/layout/sidebar/sidebar.component.html
+++ b/frota-pro/src/app/shared/layout/sidebar/sidebar.component.html
@@ -47,9 +47,9 @@
     </button>
 
     <div class="subnav" *ngIf="open.oficina">
-      <a class="sub-item" routerLink="/dashboard/oficina/estoque" routerLinkActive="active">
+      <a class="sub-item" routerLink="/dashboard/oficina/manutencoes/estoque" routerLinkActive="active">
         <span class="sub-icon"><i class="fas fa-box"></i></span>
-        <span>Estoque</span>
+        <span>Manutenções</span>
       </a>
 
       <a class="sub-item" routerLink="/dashboard/oficina/ordens-servico" routerLinkActive="active">
