--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -75,9 +75,11 @@
         </button>
 
         <ul class="submenu" *ngIf="submenuOficinaAberto && !isClosed">
-          <li routerLink="oficina/estoque" routerLinkActive="active">Estoque</li>
-          <li routerLink="oficina/ordens-servico" routerLinkActive="active">Ordens de Serviço</li>
+          <li routerLink="/dashboard/manutencoes" routerLinkActive="active">Manutenções</li>
+          <li routerLink="/dashboard/oficinas" routerLinkActive="active">Oficinas</li>
+          <li routerLink="/dashboard/pneus-vida-util" routerLinkActive="active">Vida Útil do Pneu</li>
         </ul>
+
       </li>
 
       <!-- INTEGRAÇÕES -->
